# dedetracker

./: .gitignore  .gitmodules  CMakeLists.txt  PseudoHeapManager.c  README  README.md  TrackData.c  main.c  notes.md  test_exe
lib/src/: .placeholder
src/: Dedetracker.c  Dedetracker.h  PseudoHeapManager.c  PseudoHeapManager.h  PseudoHeapPrint.c  PseudoHeapStruct.c  TrackData.c  TrackData.h  main.c  test.c  test.h
test/: tPseudoHeapManager.c  tPseudoHeapManagerLong.c  tPseudoHeapManagerSmall.c  tTrackData.c  test.c  test.h
